updated contact us and footer

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a href="https://www.latticeworksinc.com" class="brand-link mbr-white display-5">
-                        LatticeWorks, Inc</a></span>
+                        LATTICEWORKS</a></span>
                 </div>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <div class="hamburger">
