--- a/page2.html
+++ b/page2.html
@@ -23,6 +23,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-101175758-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-101175758-1');
+		</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-r5ESuzS8jE" once="menu" id="menu1-e">
 
     
@@ -113,7 +127,7 @@
                         <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 mbr-light display-5">
                             Ready to get started?</h4>
                         <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                        <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hSn5BSQaEIqMgRGwwo25k+w6n/IitqyTTUaPh3HVUgstp3qrE/0DX4T9xeXoISY7B67/sQWm8fz3UTCI3pKVb8SEKLEF85lISS6QnEIKt+DyJhH0t7CitHV89ALBOARz">
+                        <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nbz16Q6BTyjstOoRZ8lP5lhuvbjP3cc6xrarJI5PdunFj8UBau2xJ8BIekHVqgsHPrUK0wi4PzLVBvilVB9LlvwhNiSrpIjfw6wnFUj8Jp1U74vrBmI4NfFSpFe60WFy">
                             <div class="row">
                                 <div class="col-md-12" data-for="name">
                                     <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-17">
