updated intro text

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <h1 class="mbr-section-title pb-3 mbr-fonts-style display-2">
                     Cloud, DevOps, Agile, Security<br><strong>with LatticeWorks</strong></h1>
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
-                    LatticeWorks is a technology consulting company delivering DevOps and Cloud Computing (AWS) solutions.  We are passionate about helping our customers fulfill their business needs by enabling them with build/release automation, infrastructure as code, automated testing, and event driven security.
+                    LatticeWorks is a technology consulting company delivering DevOps and Cloud Computing solutions.  We are passionate about helping our customers fulfill their business needs by enabling them with build/release automation, infrastructure as code, automated testing, and event driven security.
                 </p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline btn-bgr display-4" href="index.html#features2-9">See How We Can Help</a></div>
             </div>
