--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     01
                 </h4>
                 <h3 class="article-title-left align-right mbr-fonts-style pb-4 display-5">Cloud</h3>
-                <p class="mbr-text-left align-right mbr-fonts-style display-7">With cloud computing you can sacle up or scale down your operation and storage needs to suit your situation. &nbsp;It can also support having your whole infrastructure as code, which enable you to deploy enterprise IT systems with a click of a button.&nbsp;</p>
+                <p class="mbr-text-left align-right mbr-fonts-style display-7">With cloud computing you can scale up or scale down your operation and storage needs to suit your situation. &nbsp;It can also support having your whole infrastructure as code, which enable you to deploy enterprise IT systems with a click of a button.&nbsp;</p>
             </div>
             <div class="article mb-4 col-sm-12 col-md-6">
                 <h4 class="pb-3 mbr-fonts-style article-counter-right align-left display-1">
