update page names

--- a/aboutus.html
+++ b/aboutus.html
@@ -155,11 +155,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link mbr-white display-4" href="page1.html">
+                        <a class="nav-link link mbr-white display-4" href="aboutus.html">
                            <span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>
                             About Us
                         </a>
-                    </li><li class="nav-item"><a class="nav-link link mbr-white display-4" href="page2.html"><span class="mbri-chat mbr-iconfont mbr-iconfont-btn"></span>
+                    </li><li class="nav-item"><a class="nav-link link mbr-white display-4" href="contactus.html"><span class="mbri-chat mbr-iconfont mbr-iconfont-btn"></span>
                            Contact Us</a></li></ul>
                 
             </div>
