--- a/aboutus.html
+++ b/aboutus.html
@@ -66,7 +66,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text py-5 mbr-fonts-style display-7">
-                                    Sean has over nineteen years of experience in Enterprise IT system desgin and implementation. &nbsp;Sean focuses not only in building the right solution but also in building them the right way. &nbsp;For the past ten years, Sean has been delivering CICD Pipelines, Infrastructure as Code, DevOps transformation, and Cloud &nbsp;Migration/Transformation solutions for federal governement agencies and financial institutions. &nbsp;</p>
+                                    Sean has over nineteen years of experience in Enterprise IT system desgin and implementation. &nbsp;Sean focuses not only in building the right solutions but also in building them the right way. &nbsp;For the past ten years, Sean has been delivering CICD Pipelines, Infrastructure as Code, DevOps transformation, and Cloud &nbsp;Migration/Transformation solutions for federal governement agencies and financial institutions. &nbsp;</p>
                             </div>
                         </div>
                     </div>
