--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title mbr-fonts-style display-5">Reduce <strong>Time</strong></h4>
-                    <p class="mbr-text mbr-fonts-style display-7">LatticeWorks can help you deliever your products to customers faster by speeding up your software delivery process. &nbsp;</p>
+                    <p class="mbr-text mbr-fonts-style display-7">LatticeWorks can help you deliver your products to customers faster by speeding up your software delivery process. &nbsp;</p>
                 </div>
             </div>
 
