--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <div class="card-box">
                     <h4 class="card-title mbr-fonts-style display-5">Dynamic&nbsp;<strong>Security</strong></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                        LatticeWorks implements security best practices while monitoring your infracturcture for vulnerabilities.</p>
+                        LatticeWorks implements security best practices while monitoring your infrastructure for vulnerabilities.</p>
                 </div>
             </div>
 
