--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                     03
                 </h4>
                 <h3 class="article-title-left align-right mbr-fonts-style pb-4 display-5">Agile</h3>
-                <p class="mbr-text-left align-right mbr-fonts-style display-7">Agile transformation requires organizational and cultural changes along with right toolomg. &nbsp;LatticeWorks has experience in help clients adopt agile software development and implement Enterprise tooling solutions. &nbsp;</p>
-            </div>
+                <p class="mbr-text-left align-right mbr-fonts-style display-7">Agile transformation requires organizational and cultural changes along with right tools. &nbsp;LatticeWorks has experience in help clients adopt agile software development and implement Enterprise tooling solutions. &nbsp;</p>
+            </divto
             <div class="article mb-4 col-sm-12 col-md-6">
                 <h4 class="pb-3 mbr-fonts-style article-counter-right align-left display-1">
                     04
