--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     04
                 </h4>
                 <h3 class="article-title-right mbr-fonts-style pb-4 align-left display-5">Security</h3>
-                <p class="mbr-text-right mbr-fonts-style align-left display-7">With continuous monitoring and event driven security, we can detect and remedidate issues as the arise. &nbsp;LatticeWorks will help keep your resources and data secure in the cloud. &nbsp;</p>
+                <p class="mbr-text-right mbr-fonts-style align-left display-7">With continuous monitoring and event driven security, we can detect and remediate issues as the arise. &nbsp;LatticeWorks will help keep your resources and data secure in the cloud. &nbsp;</p>
             </div>
         </div>
     </div>
