--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     01
                 </h4>
                 <h3 class="article-title-left align-right mbr-fonts-style pb-4 display-5">Cloud</h3>
-                <p class="mbr-text-left align-right mbr-fonts-style display-7">With cloud computing you can scale up or scale down your operation and storage needs to suit your situation. &nbsp;It can also support having your whole infrastructure as code, which enable you to deploy enterprise IT systems with a click of a button.&nbsp;</p>
+                <p class="mbr-text-left align-right mbr-fonts-style display-7">With cloud computing you can scale up or scale down your operation and storage needs to suit your situation. &nbsp;It can also support having your whole infrastructure as code, which enables you to deploy enterprise IT systems with a click of a button.&nbsp;</p>
             </div>
             <div class="article mb-4 col-sm-12 col-md-6">
                 <h4 class="pb-3 mbr-fonts-style article-counter-right align-left display-1">
@@ -212,14 +212,14 @@
                     03
                 </h4>
                 <h3 class="article-title-left align-right mbr-fonts-style pb-4 display-5">Agile</h3>
-                <p class="mbr-text-left align-right mbr-fonts-style display-7">Agile transformation requires organizational and cultural changes along with right tools. &nbsp;LatticeWorks has experience in help clients adopt agile software development and implement Enterprise tooling solutions. &nbsp;</p>
+                <p class="mbr-text-left align-right mbr-fonts-style display-7">Agile transformation requires organizational and cultural changes along with the right tooling. &nbsp;LatticeWorks has experience in helping clients adopt agile software development and implementing Enterprise tooling solutions. &nbsp;</p>
             </div>
             <div class="article mb-4 col-sm-12 col-md-6">
                 <h4 class="pb-3 mbr-fonts-style article-counter-right align-left display-1">
                     04
                 </h4>
                 <h3 class="article-title-right mbr-fonts-style pb-4 align-left display-5">Security</h3>
-                <p class="mbr-text-right mbr-fonts-style align-left display-7">With continuous monitoring and event driven security, we can detect and remediate issues as the arise. &nbsp;LatticeWorks will help keep your resources and data secure in the cloud. &nbsp;</p>
+                <p class="mbr-text-right mbr-fonts-style align-left display-7">With continuous monitoring and event driven security, we can detect and remediate issues as they arise. &nbsp;LatticeWorks will help keep your resources and data secure in the cloud. &nbsp;</p>
             </div>
         </div>
     </div>
